# ollama-frontend

./: .gitignore  CLAUDE.md
backend/: .env  Cargo.toml  README.md  database.db  template.db
backend/.sqlx/: query-0a02f07a49640526f004df5a1d4d4293a57913e1cc07db3749bb4b7479985a70.json  query-1b05b43027636d5e933cc278ae9a5d7b977ef546679d13a943e4d34db0b610c7.json  query-57b3384f86ddeb4db28f20280309a12f8d2da432e74bfb04831d5f9d517de782.json  query-590c1446ff00689def8ddf24d9362c45780c28d0cee7a63c1d9460490fa24352.json  query-62f78c3ee578dbcfffbab27c65dee4776a2d40853e3d7da9ad5fb701ffc4e8ad.json  query-6a64baa2ad6a4e85e5741a1560119ad24c1ea2eb4e63ec468fe93e15fce490d7.json  query-72a47c2e1944d5ce81c036f4129535b7c57c83f16aefbf26114d60a0f45c6222.json  query-7750f6ddb495fe929c5f009f3d80863ddf4d922035c6c87a23b22d3f48704028.json  query-7a8ed9a9b0a1f4f3b8d801eb61027d73de5fd1a29631b478fe7e035a71c40974.json  query-911175a8a5aebc75a615958332f9ad52acb802f9658918848865eb583e13986e.json  query-e12d9af39be7cf5827a6ed0bc44a14c2192e4df316ea2ba6f25880f211b78d33.json  query-e89bd46580910e047f04a221367a94c14f99353e3f646ea0aa76a2ad025e2d5d.json  query-e98db9c8831d2ebbf647fe5c39882c78549c1322427814881859cdadf616a3ad.json
backend/migrations/: 20250510212635_Initial.sql
backend/src/: auth.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  index.scss  state-management-ideas.txt  test-websocket.html
frontend/src/: main.rs  state.rs
