[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
common = { path = "../common" }
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "migrate", "time"] }
async-stream = "0.3.6"
argon2 = "0.5.0"
rand = "0.8.5"
time = "0.3.20"
uuid = { version = "1.3.0", features = ["v4"] }
