[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "DomTokenList",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "console",
    "Request",
    "RequestInit",
    "Response",
    "Headers"
]}
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-utils = "0.1"
console_error_panic_hook = "0.1.7"